--- a/m-buddy/AndroidManifest.xml
+++ b/m-buddy/AndroidManifest.xml
@@ -8,12 +8,6 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
-    <supports-screens
-        android:anyDensity="false"
-        android:largeScreens="true"
-        android:normalScreens="true"
-        android:xlargeScreens="true" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -21,8 +15,13 @@
         <activity android:name="org.awi.buddy.ui.MainBuddy" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="org.awi.buddy.ui.Listing"
+            android:label="@string/title_activity_listing" >
         </activity>
     </application>
 
