--- a/UGBuddy/AndroidManifest.xml
+++ b/UGBuddy/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -36,11 +37,11 @@
             android:label="@string/title_dashboardUI" >
         </activity>
         <activity
-            android:name="org.awi.ui.Details"
+            android:name="org.awi.ui.DetailUI"
             android:label="@string/title_activity_name" >
         </activity>
         <activity
-            android:name="org.awi.ui.Listing"
+            android:name="org.awi.ui.ListingUI"
             android:label="@string/title_activity_name" >
         </activity>
         <activity
